syntax = "proto3";

package tcp;
option go_package = "github.com/andantan/modular-blockchain/proto/network/protocol/tcp";

message TcpHandshakeMessage {
  bytes public_key = 1;
  string net_addr = 2;
  bytes signature = 3;
}